[package]
name = "generoust"
version = "0.1.0"
authors = ["Matt <lezgomatt@gmail.com>"]
edition = "2018"
description = "A procedural macro for writing iterators in Rust"
repository = "https://github.com/lezgomatt/generoust/"
license = "Zlib"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
